# myscore

./: .gitignore  PLAN.md
.github/workflows/: deploy.yml
backend/: .env.example  .gitignore  pyproject.toml  run.sh
backend/app/: config.py  main.py
backend/app/api/: upload.py
backend/app/core/: combiner.py  extraction.py  models.py  normalizer.py  parser.py  scoring.py
backend/app/db/: models.py
frontend/: .env.example  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: BalanceTrendChart.tsx  BreakdownBarChart.tsx  DonutChart.tsx  GaugeChart.tsx  MetricCards.tsx  MonthlyChart.tsx  RadarChart.tsx
worker/: package-lock.json  package.json  tsconfig.json  wrangler.toml
worker/src/: combiner.ts  extraction.ts  index.ts  models.ts  parser.ts  pdfjs.d.ts  scoring.ts
worker/static/: 404.html  index.html  index.txt
worker/static/_next/static/chunks/app/: layout-b7f8086ef2238899.js  page-4b701b87287333b1.js
worker/static/_next/static/chunks/app/_not-found/: page-232e14888d5686d1.js
worker/static/_next/static/css/: 3a38ceea6d7da028.css
